# get-release-version-action

./: .gitignore  Dockerfile  LICENSE  README.md  action.yaml  app.py  logging.config.yaml  pyproject.toml  requirements.txt  semantic-release.config.json  test.sh
.github/actions/containers/: action.yml
.github/actions/local-action/: action.yaml
.github/actions/setup-python/: action.yml
.github/workflows/: lint.yml  release.yaml  test.yaml
.mypy_stubs/semantic_release/: __init__.pyi  const.pyi  enums.pyi  errors.pyi  helpers.pyi
.mypy_stubs/semantic_release/changelog/: __init__.pyi  context.pyi  release_history.pyi  template.pyi
.mypy_stubs/semantic_release/cli/: __init__.pyi  common.pyi  config.pyi  const.pyi  github_actions_output.pyi  masking_filter.pyi  util.pyi
.mypy_stubs/semantic_release/commit_parser/: __init__.pyi  _base.pyi  angular.pyi  emoji.pyi  scipy.pyi  tag.pyi  token.pyi  util.pyi
.mypy_stubs/semantic_release/hvcs/: __init__.pyi  _base.pyi  bitbucket.pyi  gitea.pyi  github.pyi  gitlab.pyi  token_auth.pyi  util.pyi
.mypy_stubs/semantic_release/version/: __init__.pyi  algorithm.pyi  declaration.pyi  version.pyi  (+1 more)
get_release_version_action/: __init__.py  app.py  entrypoint.sh
get_release_version_action/algorithms/: __init__.py  cli.py  hash_based.py  main_algorithm.py  semantic.py
get_release_version_action/models/: __init__.py  inputs.py  outputs.py
get_release_version_action/utils/: git.py  logger.py
src/: app.py  entrypoint.sh  indent_logging_formatter.py  requirements.txt  semantic-release.config.json
src/get_release_version_action/: app.py
tests/: logging.config.yaml  test_action.py  test_hotfixes.py  test_one_commit.py  test_one_hotfix.py  test_one_hotfix_then_version.py  test_one_version.py  test_two_commits.py  test_two_hotfixes.py  test_two_versions.py
tests/e2e/: test_one_commit.py  test_one_hotfix.py  test_one_hotfix_then_version.py  test_two_commits.py  test_two_hotfixes.py  test_two_versions.py
tests/resources/: logging.config.yaml
tests/utils/: __init__.py  action_wrapper.py  indent_logging_formatter.py  logger.py  test_repo.py
(+20 files in other folders)
