[tool.poetry]
package-mode = false
name = "get-release-version-action"
version = "5.0.0"
description = "A GitHub Action to determine the next version by checking the commit history for conventional commits with support for hotfix changes."
authors = ["wemogy <hello@spaceblocks.cloud>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/wemogy/get-release-version-action"
repository = "https://github.com/wemogy/get-release-version-action"
documentation = "https://github.com/wemogy/get-release-version-action"

[tool.poetry.dependencies]
python = "^3.12"
PyYAML = "^6.0.1"
semver = "^3.0.2"
python-semantic-release = "^9.4.1"
GitPython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
mypy = "^1.9.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
